--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "http": "0.0.0",
+    "moment": "^2.20.1",
     "nodemon": "^1.14.9",
     "promise-mysql": "^3.1.5"
   }
