--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["env"]
+  "presets": ["env"],
+  "plugins": [["module-resolver", {
+      "root": ["./"],
+      "alias": {
+        "models": "./app/models",
+        "routes": "./app/routes",
+        "config": "./config"
+      }
+    }]
+  ]
 }
