--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "aws-sdk": "^2.200.0",
     "body-parser": "^1.18.2",
+    "braintree": "^2.8.0",
     "express": "^4.16.2",
     "http": "0.0.0",
     "moment": "^2.20.1",
