--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.18.2",
     "braintree": "^2.8.0",
     "express": "^4.16.2",
+    "firebase-admin": "^5.12.0",
     "http": "0.0.0",
     "moment": "^2.20.1",
     "multer": "^1.3.0",
